--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ infrastructure/.credentials
 infrastructure/.terraform/*
 infrastructure/.terraform.lock.hcl
 infrastructure/terraform.tfstate
+infrastructure/credentials.tfvars
